<resources>
    <string name="app_name">Travel Mate</string>
    <string name="title_travel">Travel</string>
    <string name="title_itinerary">Itinerary</string>
    <string name="title_profile">Profile</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_remember_me">Remember me</string>
    <string name="text_login">Login</string>
    <string name="text_enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
    <string name="text_note">Note</string>
    <string name="text_date">Date</string>
    <string name="text_description">Description</string>
    <string name="text_delete">Delete</string>
    <string name="detail_destination">Detail Destination</string>
    <string name="text_add_to_itinerary">Add to itinerary</string>
    <string name="text_edit_itinerary">Edit itinerary</string>
    <string name="text_change_destination">Change Destination</string>
    <string name="text_logout">Logout</string>
    <string name="text_beach">Beach</string>
    <string name="text_cultural">Cultural</string>
    <string name="text_mountain">Mountain</string>
    <string name="text_culinary">Culinary</string>
    <string name="text_start_journey">Start journey</string>
    <string name="text_search">Search</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_no_data">No Data</string>
    <string name="text_what_do_you_want_to_visit">What do you want to visit?</string>
    <string name="text_pick_your_destination">Pick your\ndestination</string>
    <string name="text_update">Update</string>
</resources>