<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What do you want to visit?"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Pick your destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_1" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox_beach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/text_beach"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView_2"
            app:layout_constraintTop_toBottomOf="@id/textView_2" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox_mountain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_mountain"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView_2"
            app:layout_constraintTop_toBottomOf="@id/checkBox_beach" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox_cultural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_cultural"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView_2"
            app:layout_constraintTop_toBottomOf="@id/checkBox_mountain" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox_culinary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_culinary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView_2"
            app:layout_constraintTop_toBottomOf="@id/checkBox_cultural" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_save"
            app:cornerRadius="12dp"
            app:icon="@drawable/outline_save_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_culinary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_cancel"
            app:cornerRadius="12dp"
            app:icon="@drawable/outline_cancel_24"
            app:layout_constraintBottom_toBottomOf="@+id/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toTopOf="@+id/btn_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>